frontend/src/App.css
:root {
    --off-white: #fafafa;
}

body {
    font-family: 'Arvo';
    
}

.nav {
    background-color: white;
    position: sticky;
    top: 0px;
    width: 100%;
    height: 80px;
    z-index: 1000;
    box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
}

.nav-logo {
    height: 435px;
    width: 418px;
}

.nav-logo:hover {
    cursor: pointer;
}

.nav .nav-content {
    max-width: 900px;
    padding: 0rem 3rem;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.nav-item {
    display: inline;
    margin-left: 2rem;
    color: #333;
}

.nav-item:hover {
    cursor: pointer;
}

.each-slide-effect > div {
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    height: 90vh;
    transition: ease 4000ms;
}

.prevArrow {
    position: absolute;
    top: 50%;
}

.nextArrow {
    position: relative;
    top:50%;
    right: 5%;
}

.span {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 95px;
    font-weight: bold;
    color: black;
    -webkit-text-stroke: 1px white;
    position: absolute;
    top: 35%;
    transform: translateX(400px)
}

.span1 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 95px;
    font-weight: bold;
    color: black;
    -webkit-text-stroke: 1px white;
    position: absolute;
    top: 45%;
    transform: translateX(465px);
}






/* .heroContent { 
    height: 550px;
    width: 100%;
    top: 0;
    left: 0;
    background: url('../src/Assets/Images/Grocery.jpg');
    background-size: cover;
    background-position: center;
} */


.section1 {
    height: 75vh;
}

.full-logo {
    width: 100%;
    margin-top: 10%;
}

.about {
    text-align: center;
}

.title {
    margin: 10px;
}

.info {
    margin: 10px;
    font-size: 40px;
}

#row2 {
    padding-top: 50px;
}

#row3 {
    text-align: center;
}

#row4 {
    align-items: center;
}

.MLA {
    height: 533px;
    width: 535px;
    
}

.mla-text {
    
    font-size: 30px;
    
}

